--- a/style.css
+++ b/style.css
@@ -274,3 +274,7 @@ foreignObject:hover{display: block !important;animation:  opa .4s forwards}
 .active{
     color: #49ffa5;
 }
+.star{font-size: 2rem;color: #ddd}
+.star span{width: 0;color: #3b3b00;overflow: hidden;pointer-events: none;left:0;}
+.star input{opacity: 0;width: 100%;height: 100%;cursor: pointer;left:0;}
+
